Some small changes in text and presentation

--- a/Dok/Kapitel/TechnischesUndFormeln.tex
+++ b/Dok/Kapitel/TechnischesUndFormeln.tex
@@ -1,4 +1,5 @@
 \section{Einfache FM-Synthese}
+In diesem Kapitel wird ausschließlich die einfache FM-Synthese betrachtet. Diese zeichnet sich dadurch aus, dass lediglich ein Träger und ein Modulator für die Synthese verwendet wird. Anhand dieser Form der FM-Synthese können grundlegende Erläuterungen sehr gut und verständlich durchgeführt werden.
 \label{einfacheFM}
 \FloatBarrier
 \subsection{Grundlegende Erläuterungen}
@@ -35,24 +36,24 @@ Quelle: \url{http://www.ulrich-rapp.de/stoff/mathematik/Sinus_Einheitskreis.gif}
 \\Stand 09.06.2015
 \end{figure}
 
-Der aktuelle Winkel im Einheitskreis kann auch im \textbf{Bogenmaß} angegeben werden. Das Bogenmaß beschreibt, wie weit der Bogen des Einheitskreises im Uhrzeigersinn abgelaufen wird. Dabei ist $\bm{\pmb{\pi}}$ die \textbf{Kreiszahl}. Ein Bogenmaß von $2\pi$ gibt eine ganze Umdrehung im Einheitskreis an, der Wert $\pi$ entspricht einer halben Umdrehung. Um nun auf eine Sinusfunktion überzuleiten, muss das Bogenmaß in Abhängigkeit von der \textbf{Zeit t} angegeben werden, die Formel lautet dann $\bm{\sin(2\pmb{\pi}\cdot t)}$. Damit festgelegt werden kann, wie oft der Einheitskreis in einer Sekunde abgelaufen wird, multipliziert man das Bogenmaß $2\pi$ mit dem Faktor $\bm{f}$. Dabei entspricht $f$ der \textbf{Frequenz} der Funktion, also wie viele Schwingungen in einer Sekunde durchlaufen werden. Der Wert $\bm{2\pmb{\pi} \cdot f}$ wird auch als \textbf{Kreisfrequenz} bezeichnet.
-Man spricht bei Sinus- und Kosinusfunktion auch von Winkelfunktionen, denn der Funktionswert der Funktion kann auch anhand des Winkels (in Bogenmaß) im Einheitskreis angeben. 
+Der aktuelle Winkel im Einheitskreis kann auch im \textbf{Bogenmaß} angegeben werden. Das Bogenmaß beschreibt, wie weit der Bogen des Einheitskreises im Uhrzeigersinn abgelaufen wird. Dabei ist $\bm{\pi}$ die \textbf{Kreiszahl}. Ein Bogenmaß von $2\pi$ gibt eine ganze Umdrehung im Einheitskreis an und der Wert $\pi$ entspricht einer halben Umdrehung. Um nun auf eine Sinusfunktion überzuleiten, muss das Bogenmaß in Abhängigkeit von der \textbf{Zeit t} angegeben werden, die Formel lautet dann $\bm{\sin(2\pi \cdot t)}$. Damit festgelegt werden kann, wie oft der Einheitskreis in einer Sekunde abgelaufen wird, multipliziert man das Bogenmaß $2\pi$ mit dem Faktor $\bm{f}$. Dabei entspricht $f$ der \textbf{Frequenz} der Funktion, also wie viele Schwingungen in einer Sekunde durchlaufen werden. Der Wert $\bm{2\pi \cdot f}$ wird auch als \textbf{Kreisfrequenz} bezeichnet.
+Man spricht bei Sinus- und Kosinusfunktion auch von Winkelfunktionen, denn der Funktionswert der Funktion kann auch anhand des Winkels (in Bogenmaß) im Einheitskreis angegeben werden. 
 Eine Veranschaulichung des Zusammenhangs zwischen dem Einheitskreis und der Sinusfunktion zeigt Abbildung \ref{fig:unitcircleToSinus}.
 
 Der Unterschied zwischen Kosinus- und Sinusfunktion ist, dass Kosinus bei dem Funktionswert 1 beginnt und Sinus bei Funktionswert 0. Aus diesem Zusammenhang lassen sich folgende Beziehungen (Auch: \textbf{Komplementärformeln}) zwischen Sinus und Kosinus feststellen:\\
 
-\begin{equation}\bm{\sin(\frac {\pmb{\pi}}{2} – x) =\cos(x)}\end{equation}
-\begin{equation}\bm{\cos(\frac {\pmb{\pi}}{2} – x) = \sin(x)}\end{equation}
+\begin{equation}\bm{\sin(\frac {\pi}{2} – x) =\cos(x)}\end{equation}
+\begin{equation}\bm{\cos(\frac {\pi}{2} – x) = \sin(x)}\end{equation}
 \cite[s. 218]{matheBuch}
 
-Überträgt man diese mathematischen Erkenntnisse nun auf einen Ton, so kann man dessen Funktion wie folgt beschreiben: 		\begin{equation}\bm{y(t) = A \cdot \sin(2 \pmb{\pi} f \cdot t)}\end{equation}
+Überträgt man diese mathematischen Erkenntnisse nun auf einen Ton, so kann man dessen Funktion wie folgt beschreiben: 		\begin{equation}\bm{y(t) = A \cdot \sin(2 \pi f \cdot t)}\end{equation}
 
-Um \textbf{90\degree} oder $\bm{\frac{\pmb{\pi}}{2}}$ verschoben gilt: 		$\bm{y(t) = A\cdot \cos(2 \pmb{\pi} f\cdot t)}$
+Um \textbf{90\degree} oder $\bm{\frac{\pi}{2}}$ verschoben gilt: 		$\bm{y(t) = A\cdot \cos(2 \pi f\cdot t)}$
 
-Bei $\bm{A}$ handelt es sich um die \textbf{Amplitude} des Tons und somit dessen \textbf{Lautstärke}. Alle Funktionswerte der Funktion werden mit diesem Faktor multipliziert und dadurch größer oder kleiner.
+Bei $\bm{A}$ handelt es sich um die \textbf{Amplitude} des Tons und somit um dessen \textbf{Lautstärke}. Alle Funktionswerte der Funktion werden mit diesem Faktor multipliziert und dadurch erhöht oder verringert.
 
-Das f ist wie oben bereits beschrieben die Frequenz des Tons. Sie gibt die \textbf{Anzahl der Schwingungen (Perioden) pro Sekunde} an und wird in $f=\frac{1}{T}$ angegeben, wobei T die Periodendauer in Sekunden ist. Die Einheit ist Hertz(Hz) oder $\frac{1}{s}$.
-Je größer die Frequenz eines Tones ist, desto höher klingt er für das Ohr.
+Das f ist, wie oben bereits beschrieben, die Frequenz des Tons. Sie gibt die \textbf{Anzahl der Schwingungen (Perioden) pro Sekunde} an und wird in $f=\frac{1}{T}$ angegeben, wobei T die Periodendauer in Sekunden ist. Die Einheit ist Hertz (Hz) oder $\frac{1}{s}$.
+Je größer die Frequenz eines Tones ist, desto höher wird er vom Menschen wahrgenommen.
 
 Physikalisch gesehen ist ein Ton eine periodische Änderung des Luftdruckts, also Luftmoleküle die um ihre Ruhelage in Schwingung versetzt werden\cite[s. 111 f.]{zwicker}. 
 
@@ -60,11 +61,11 @@ Für das menschliche Ohr hören sich Sinus- und Kosinusschwingungen gleich an, d
 \subsubsection{Parameter der FM-Synthese nach Chowning}
 \label{chowningparameter}
 
-In diesem Kapitel wird auf die unterschiedlichen Parameter eingegangen, welche in der Formel der einfachen FM-Synthese von John Chowning vorkommen. Zudem wird deren Funktion im Einzelnen beschrieben. Es muss angemerkt werden, dass Chowning in seinen Formeln andere Symbole verwendet als normalerweise in der Nachrichtentechnik üblich. Bei den entsprechenden Symbolen ist eine Anmerkung angefügt.
+In diesem Kapitel wird auf die unterschiedlichen Parameter eingegangen, welche in der Formel der einfachen FM-Synthese von John Chowning vorkommen. Zudem wird deren Funktion im Einzelnen beschrieben. Es muss angemerkt werden, dass Chowning in seinen Formeln andere Symbole verwendet als in der Nachrichtentechnik üblich. Bei den entsprechenden Symbolen ist eine Anmerkung angefügt.
 
 Die Parameter werden mit der Gleichung in Sinusdarstellung vorgestellt, d.h. Trägersignal und Modulator sind Sinusfunktionen. Dieselbe Erklärung funktioniert analog dazu auch mit Kosinusfunktionen für den Träger und den Modulator.
 Die Gleichung für eine frequenzmodulierte Welle lautet wie folgt:
-\begin{equation} \bm{e(t) = A sin(\pmb{\alpha} t + I sin(\pmb{\beta} t))} \end{equation}
+\begin{equation} \bm{e(t) = A sin(\alpha t + I sin(\beta t))} \end{equation}
 
 \begin{lstlisting}[mathescape]
 - $\bm{e(t)} $ beschreibt die [*Amplitude des modulierten Signals zum Zeitpunkt t*]
@@ -79,5 +80,7 @@ Die Gleichung für eine frequenzmodulierte Welle lautet wie folgt:
 Der Modulationsindex beschreibt also das Verhältnis des Frequenzhubs zur Modulationsfrequenz.
 Man kann anhand der Formel bereits erkennen, dass bei einem Modulationsindex von 0 keine Modulation stattfindet. Dabei wird der Frequenzhub der Modulation auch gleich 0, da $ I=\frac{d}{m} $ und somit $ d = 0\cdot m = 0 $ gilt. 
 \begin{equation} e(t) = A \sin(\alpha t + 0 \sin(\beta t))  \Rightarrow  e(t) = A \sin(\alpha t) \end{equation}
-Die Frequenz in Hz (Schwingungen pro Sekunde) ergibt sich, wenn man die Kreisfrequenz (siehe oben) durch $2\pi$ teilt.
-Anhand der Frequenz des Modulators kann man sehen, wie oft der oben beschriebene Frequenzhub pro Sekunde durchlaufen wird. Beispiel: Bei einer Modulationsfrequenz von 440 Hz wird der Frequenzhub 440 mal pro Sekunde durchlaufen.
+Die Frequenz in Hz (Schwingungen pro Sekunde) ergibt sich, wenn die Kreisfrequenz (siehe oben) durch $2\pi$ teilt wird.
+Anhand der Frequenz des Modulators ist ersichtlich, wie oft der oben beschriebene Frequenzhub pro Sekunde durchlaufen wird. Beispiel: Bei einer Modulationsfrequenz von 440 Hz wird der Frequenzhub 440 mal pro Sekunde durchlaufen.
+
+Die Formel der einfachen FM-Synthese sieht auf den ersten Blick recht einfach aus. Wie sich jedoch in der Praxis herausgestellt hat, erfordert es sehr viel Aufwandt, die Mathematik hinter dieser Syntheseform zu beschreiben. Dies wird in den folgenden Abschnitten noch ersichtlich. 
