--- a/Dok/Kapitel/Einfuehrung.tex
+++ b/Dok/Kapitel/Einfuehrung.tex
@@ -9,9 +9,7 @@ Die momentane Amplitude der Modulation lässt sich bei der FM-Synthese durch fol
 \begin{equation}
 e(t) = A\sin(\alpha t + I\sin(\beta t)) \cite{chowningPaper}
 \end{equation}
-Bei der äußeren Sinusfunktion handelt es sich um den Träger, welcher in seiner Frequenz durch das Modulationssignal (innerer Sinus) moduliert wird.
-
-\textbf{Abbildung \ref{fig:vergleichSignale}} veranschaulicht die Frequenzmodulation eines Trägers durch den Modulator.
+Bei der äußeren Sinusfunktion handelt es sich um den Träger, welcher in seiner Frequenz durch das Modulationssignal (innerer Sinus) moduliert wird. \textbf{Abbildung \ref{fig:vergleichSignale}} veranschaulicht die Frequenzmodulation eines Trägers durch den Modulator.
 
 \begin{figure} [ht]
 \centering
@@ -21,7 +19,7 @@ Bei der äußeren Sinusfunktion handelt es sich um den Träger, welcher in seine
 \end{figure}
 \FloatBarrier
 
-Technisch gesehen kann die FM-Synthese mit Oszillatoren umgesetzt werden. In der einfachsten Form benötigt man dazu einen Träger-Oszillator und einen Modulator-Oszillator. Wie eine einfache FM-Synthese in Form einer Schaltung aussehen kann, zeigt \textbf{Abbildung \ref{fig:schaltung}}. Der Ausgang des ersten Oszillators geht dabei in den Eingang des Zweiten. Dabei kann entweder direkt die Frequenz des Trägers beeinflusst werden, jedoch auch dessen Phase. Bei VCA handelt es sich um einen spannungsgesteuerten Verstärker (Voltage Controlled Amplifier), EG ist ein Hüllkurvengenerator (Envelope Generator). $f_M$ und $f_C$ sind die Frequenzen der beiden Oszillatoren. Über den Modulationsindex $\beta$ kann die Stärke der Modulation festgelegt werden. 
+Technisch gesehen kann die FM-Synthese mit Oszillatoren umgesetzt werden. In der einfachsten Form benötigt man dazu einen Träger-Oszillator und einen Modulator-Oszillator. Wie eine einfache FM-Synthese in Form einer Schaltung aussehen kann, zeigt \textbf{Abbildung \ref{fig:schaltung}}. Der Ausgang des ersten Oszillators geht dabei in den Eingang des Zweiten. Dabei kann entweder direkt die Frequenz des Trägers beeinflusst werden, jedoch auch dessen Phase. Bei VCA handelt es sich um einen spannungsgesteuerten Verstärker (Voltage Controlled Amplifier), EG ist ein Hüllkurvengenerator (Envelope Generator). Bei den Parametern $f_M$ und $f_C$ handelt es sich um die Frequenzen der beiden Oszillatoren. Über den Modulationsindex $\beta$ kann die Stärke der Modulation festgelegt werden. 
 
 \begin{figure} [ht]
 \centering
@@ -39,7 +37,7 @@ Praktisch gesehen kann die Frequenzmodulationssynthese dazu verwendet werden, Kl
 \FloatBarrier
 \subsection{Beispiele}
 In diesem Kapitel werden einige konkrete Beispiele der FM-Synthese anhand von Träger- und Modulationssignal sowie des daraus resultierenden Signals aufgezeigt. Die Grafiken zeigen jeweils Plots von allen drei Signalen, welche in MATLAB erzeugt wurden.
-Die Frequenzen der jeweiligen Funktionen wurden so gewählt, dass sie in einem Frequenzbereich liegen, der vom menschlichen Ohr wahrgenommen werden kann. (siehe \textbf{``\ref{bulli:ohrToeneUndFrequenzen} - \nameref{bulli:ohrToeneUndFrequenzen}''}).
+Die Frequenzen der jeweiligen Funktionen wurden so gewählt, dass sie in einem Frequenzbereich liegen, der vom menschlichen Ohr wahrgenommen werden kann (siehe \textbf{``\ref{bulli:ohrToeneUndFrequenzen} - \nameref{bulli:ohrToeneUndFrequenzen}''}).
 
 \begin{figure} [ht]
 \centering
@@ -79,7 +77,7 @@ Als gute akustische Beispiele für die Anwendung der FM-Synthese in der Musikwel
 \FloatBarrier
 \subsection{Geschichte der FM-Synthese}
 \label{geschichteFMSynthese}
-Die grundlegende Technik hinter der FM-Synthese stammt, wie bereits erwähnt, aus der Nachrichtentechnik. Dort wird das Verfahren ``Frequenzmodulation'' genannt. Prof. Dr. John Chowning selbst gibt als Quelle zu seiner Entdeckung das Buch ``Radio Engineering'' von Frederick Emmons Terman aus dem Jahre 1947 an \cite[S. 35]{soundofinnovation}. Im Jahr 1967 entdeckte John Chowning eine neue Eigenschaft der Frequenzmodulation. Während er mit unterschiedlichen Modulationsfrequenzen experimentierte und dabei verschiedene Vibrato erzeugte, verschwand das Vibrato plötzlich bei höheren Modulationsfrequenzen. Obertöne wurden hörbar, die sich vom eigentlichen Trägersignal abhebten. Unter einem Vibrato versteht man einen schwingenden Ton, d.h. eine pulsierende Änderung der Tonhöhe.\cite{fatherofdigitalmusik}
+Die grundlegende Technik hinter der FM-Synthese stammt, wie bereits erwähnt, aus der Nachrichtentechnik. Dort wird das Verfahren ``Frequenzmodulation'' genannt. Prof. Dr. John Chowning selbst gibt als Quelle zu seiner Entdeckung das Buch ``Radio Engineering'' von Frederick Emmons Terman aus dem Jahre 1947 an \cite[S. 35]{soundofinnovation}. Im Jahr 1967 entdeckte John Chowning eine neue Eigenschaft der Frequenzmodulation. Während er mit unterschiedlichen Modulationsfrequenzen experimentierte und dabei verschiedene Vibratos erzeugte, verschwand das Vibrato plötzlich bei höheren Modulationsfrequenzen. Obertöne wurden hörbar, die sich vom eigentlichen Trägersignal abhebten. Unter einem Vibrato versteht man einen schwingenden Ton, d.h. eine pulsierende Änderung der Tonhöhe.\cite{fatherofdigitalmusik}
 
 Chowning selbst war sehr erstaunt über die entstandenen Töne. In einem Interview von 2005 sagte er dazu: 
 
@@ -96,7 +94,7 @@ Um die Stärken seiner neuen Technik zu demonstrieren, verwandelte Chowning beis
 Quelle: \url{ http://arts.mit.edu/wp-content/uploads/2014/07/ChowningYamaha.jpg} \\Stand 09.06.2015
 \end{figure}
  
-Chowning war, wie auch seine Kollegen, eher Komponist statt Erfinder. Aus diesem Grund waren sie eher an der musikalischen Seite der Erfindung interessiert als an kommerziellem Erfolg. Obwohl er das Potenzial seiner Erfindung zu dieser Zeit noch nicht überblicken konnte, wendete sich Chowning an das OTL (Office of Technology Licensing) in Stanford. Er hoffte, dass es in der Musikindustrie eine sinnvolle Anwendung seiner Entdeckung gab.\cite[S. 42]{soundofinnovation}
+Chowning war, wie auch seine Kollegen, eher Komponist als Erfinder. Aus diesem Grund waren sie eher an der musikalischen Seite der Erfindung interessiert als an kommerziellem Erfolg. Obwohl er das Potenzial seiner Erfindung zu dieser Zeit noch nicht überblicken konnte, wendete sich Chowning an das OTL (Office of Technology Licensing) in Stanford. Er hoffte, dass es in der Musikindustrie eine sinnvolle Anwendung seiner Entdeckung gab.\cite[S. 42]{soundofinnovation}
 
  Zu Beginn war seine Entdeckung jedoch nicht sehr angesehen. Viele der Firmen, welchen das neue Patent angeboten wurde, wussten nichts damit anzufangen und lehnten ab. Andy Moorer, ein Kollege Chownings in Stanford und später Mitgründer des CCRMA, sagte dazu: 
 
@@ -104,7 +102,7 @@ Chowning war, wie auch seine Kollegen, eher Komponist statt Erfinder. Aus diesem
 
 Offiziell veröffentlichte John Chowning seine neue Entdeckung der Frequenzmodulationssynthese in einem Paper, welches 1973 im ``Journal of the Audio Engineering Society'' unter dem Titel ``The Synthesis of Complex Audio Spectra by Means of Frequenzy Modulation'' erschien.
 
-Erst im Jahr 1974, als ein junger Ingenieur namens Kazukiyo Ishimura von der Firma Yamaha zu einer Vorstellung des Verfahrens geschickt wurde, erkannte dieser binnen wenigen Minuten, welches Potenzial hinter dieser neuen Anwendung der Frequenzmodulation steckt. Yamaha lizensierte das Verfahren noch im gleichen Jahr und Ishimura wurde später Chef des Yamaha Konzerns \cite{fatherofdigitalmusik}.
+Erst im Jahr 1974, als ein junger Ingenieur namens Kazukiyo Ishimura der Firma Yamaha zu einer Vorstellung des Verfahrens geschickt wurde, erkannte dieser binnen wenigen Minuten, welches Potenzial hinter dieser neuen Anwendung der Frequenzmodulation steckt. Yamaha lizensierte das Verfahren noch im gleichen Jahr und Ishimura wurde später Geschäftsführer des Yamaha Konzerns \cite{fatherofdigitalmusik}.
 
 Im Jahr 1975, nach einiger Zeit der Abwesenheit von Stanford, kehrte Chowning dorthin zurück und gründete zusammen mit einigen seiner Kollegen das CCRMA (Center for Computer Research in Music and Acoustics), welches sich auf computergenerierte Musik spezialisiert hat.
 Eine Fotografie der Gründer von CCRMA ist auf \textbf{Abbildung \ref{fig:foundersCCRMA}} zu sehen.
@@ -117,7 +115,7 @@ Eine Fotografie der Gründer von CCRMA ist auf \textbf{Abbildung \ref{fig:founde
 Quelle: \cite[S. 52]{soundofinnovation} - Figure 4.1
 \end{figure}
 
-Nachdem Yamaha die Technik der FM-Synthese lizenziert hatte, brachte die Firma im Jahr 1980 nach einem Prototypen den ersten digitalen FM-Synthesizer GS1 und zwei Jahre später mit dem GS2 eine kleinere und handlichere Version des GS1 heraus. Die Geräte kosteten um die 30.000 DM für den GS1 bzw. 16.000 DM für den GS2 und waren deshalb nur für ausgewählte Musiker gedacht. Der Durchbruch gelang im Jahre 1983 mit dem DX7. Dieser konnte parallel 16 Stimmen verarbeiten, welche durch 6 sogenannte Operatoren erzeugt wurden. Diese Operatoren waren in 32 vordefinierten Algorithmen unterschiedlich in Reihe, parallel oder mit Feedback zusammengeschaltet \cite[S. 11]{dx7manual}. Der DX7 kostete ca. 4.700 DM, preislich ähnliche und damals übliche analoge subtraktive Synthesizer konnten lediglich 4 Stimmen verarbeiten \cite{fmGS1}. Ein Bild des DX7 ist in \textbf{Abbildung \ref{fig:dx7}} zu sehen.
+Nachdem Yamaha die Technik der FM-Synthese lizenziert hatte, brachte die Firma im Jahr 1980 nach einem Prototypen den ersten digitalen FM-Synthesizer GS1 heraus. Zwei Jahre später folgte mit dem GS2 eine kleinere und handlichere Version des GS1. Die Geräte kosteten um die 30.000 DM für den GS1 bzw. 16.000 DM für den GS2 und waren deshalb nur für ausgewählte Musiker gedacht. Der Durchbruch gelang im Jahre 1983 mit dem DX7. Dieser konnte parallel 16 Stimmen verarbeiten, welche durch 6 sogenannte Operatoren erzeugt wurden. Diese Operatoren waren in 32 vordefinierten Algorithmen unterschiedlich in Reihe, parallel oder mit Feedback zusammengeschaltet \cite[S. 11]{dx7manual}. Der DX7 kostete ca. 4.700 DM, preislich ähnliche und damals übliche analoge subtraktive Synthesizer konnten lediglich 4 Stimmen verarbeiten \cite{fmGS1}. Ein Bild des DX7 ist in \textbf{Abbildung \ref{fig:dx7}} zu sehen.
 
  \begin{figure} [ht]
 \centering
