--- a/Dok/Kapitel/Fazit.tex
+++ b/Dok/Kapitel/Fazit.tex
@@ -1,4 +1,4 @@
 \section{Fazit}
 
-Chownings Entdeckung führte zu einer Revolution des Synthesizer Marktes. Der DX7 von Yamaha war einer der erfolgreichsten Synthesizer. Obwohl die zugrundeliegende Formel simpel wirkt, sind die mathematischen Hintergründe nicht trivial. Durch komplexe Anordnung von Träger und Modulatoren können beliebig komplexe Klänge erzeugt werden. Dies führt zu einer mächtigen, jedoch wenig intuitiven Technik. Musiker können durch Experimentieren verschiedener Parametern und Konfigurationen interessante Klänge erzeugen. Außerdem kann die FM-Synthese dazu verwendet werden ganze Instrumente nachzubilden.
-Diese Arbeit stellt ein Versuch dar, die FM-Synthese dem Leser näher zu bringen.
+Chownings Entdeckung führte zu einer Revolution des Synthesizer Marktes. Der DX7 von Yamaha war einer der erfolgreichsten Synthesizer und trug maßgeblich zu dieser Revolution bei. Obwohl die zugrundeliegende Formel simpel wirkt, sind die mathematischen Hintergründe nicht trivial. Durch komplexe Anordnung von Trägern und Modulatoren können beliebig komplexe Klänge erzeugt werden. Dies führt zu einer mächtigen, jedoch wenig intuitiven Technik. Musiker können durch Experimentieren verschiedener Parametern und Konfigurationen interessante Klänge erzeugen. Außerdem kann die FM-Synthese dazu verwendet werden, um ganze Instrumente nachzubilden.
+Diese Arbeit soll dem Leser die Technik der FM-Synthese näher bringen und die Hintergründe hinter einfacher und komplexer FM-Synthese anschaulich beschreiben.
