--- a/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
+++ b/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
@@ -215,14 +215,14 @@ Für die Herleitung des Frequenzspektrums brauchen keine ausschweifenden Umformu
 einfach $ \sin(w_mt) $ durch $ \sin(w_{m1}t + I_2\sin(w_{m2}t)) $ ersetzt werden. Eine Reihe einfacher Umformungen führt dann zur Formel für das Frequenzsspektrum der Kaskadenschaltung:
 \begin{equation}
 \begin{split}
-& \quad \sum_{n=-\infty}^{\infty}J_n(I_1)sin(w_{c}t + nI_2(sin(w_{m2}t))) \\
-&= \sum_{n=-\infty}^{\infty}J_n(I_1)sin(w_{c}t+n(w_{m1}t + I_2(sin(w_{m2}t)))) \\
-&= \sum_{n=-\infty}^{\infty}J_n(I_1)sin((w_{c}t+nw_{m1}t) + (I_2n(sin(w_{m2}t))))
+& \quad \sum_{n=-\infty}^{\infty}J_n(I_1)\sin(w_{c}t + nI_2(\sin(w_{m2}t))) \\
+&= \sum_{n=-\infty}^{\infty}J_n(I_1)\sin(w_{c}t+n(w_{m1}t + I_2(\sin(w_{m2}t)))) \\
+&= \sum_{n=-\infty}^{\infty}J_n(I_1)\sin((w_{c}t+nw_{m1}t) + (I_2n(\sin(w_{m2}t))))
 \end{split}
 \end{equation}
 Da hier die beiden Klammern in der Sinusfunktion zusammen exakt einer eigenständigen FM entsprechen, kann das Argument für den Sinus auch durch die Formel zur Berechnung ihres Spektrums \ref{eq:freqfm} substituiert werden. Es ergibt sich damit für das Frequenzspektrum der Kaskadenschaltung wie in \cite{schottiWeb}:
 \begin{equation}
-\sum_{n=-\infty}^{\infty}\sum_{n=-\infty}^{\infty}J_n(I_1)J_n(\mathbf{n}I_2)sin(w_{c}t+nw_{m1}t + kw_{m2}t)
+\sum_{n=-\infty}^{\infty}\sum_{k=-\infty}^{\infty}J_n(I_1)J_k(\mathbf{n}I_2)\sin(w_{c}t+nw_{m1}t + kw_{m2}t)
 \end{equation}
 Damit entspricht die Formel für das Frequenzspektrum der Kaskadenschaltung exakt jener für die Parallelschaltung \ref{eq:ParallelKompakt}, mit einem kleinen Zusatz: Es wird bei der Kaskadenschaltung zusätzlich der Modulationsindex $ I_2 $ des äußersten Modulators $M2$ mit der Ordnung $ n $ des ersten Besselkoeffizienten multipliziert und erst anschließend als Argument an die Besselfunktion gereicht. Damit ändern sich auch bei den Additionstermen für das Spektrum im Vergleich zur Parallelschaltung \ref{eq:wallofequations} lediglich die Koeffizienten:
 \begin{equation}
@@ -309,12 +309,12 @@ Da ein höherer Modulationsindex grundsätzlich die Bandbreite erhöht und für 
 
 Eine Spezialform der komplexen FM besteht darin, das Ausgangssignal des Trägers zur Modulation des Trägers heranzuziehen anstelle eines Modulators wie in der einfachen FM. Die Formel für eine Feedbackschaltung kann rekursiv wie folgt angegeben werden:
 \begin{equation}
-f_{FMfeedback}(t_{n}) = sin(w_{c}t_{n} + If_{FMfeedback}(t_{n-1})) \quad \text{mit} \quad f_{FMfeedback}(t_{0}) = 0
+f_{FMfeedback}(t_{n}) = \sin(w_{c}t_{n} + If_{FMfeedback}(t_{n-1})) \quad \text{mit} \quad f_{FMfeedback}(t_{0}) = 0
 \end{equation}
 In MATLAB oder in einer beliebigen Programmiersprache kann diese Formel dann natürlich komfortabel iterativ oder rekursiv implementiert werden.
 Das Frequenzspektrum berechnet sich \cite{schottiWeb} über:
 \begin{equation}
-f_{FMfeedback}(t) = \sum_{n=1}^{\infty}\frac{2}{nI}J_n(nI)\sin{nw_{c}t}
+f_{FMfeedback}(t) = \sum_{n=1}^{\infty}\frac{2}{nI}J_n(nI)\sin(nw_{c}t)
 \end{equation}
 Man sieht sofort, dass die Einflussnahme auf die Feedbackschaltung durch den Modulationsindex (d.h. die Amplitude, mit der man dem Ausgangssignal der Schaltung erlaubt, auf sich selbst zurückzuwirken) lediglich die Steilheit des Abfallens der Energie von den näher am Träger liegenden Seitenbändern zu den weiter außen liegenden beeinflusst. Die Variable $n$ hängt dabei nur von der Ordnung der Besselfunktion ab und durchläuft in jedem Fall ganzzahlig die Werte von 1 bis $\infty$. In jedem Fall ist die Lage der Seitenfrequenzbänder also immer ein ganzzahliges Vielfaches der Trägerfrequenz. Der Amplitudenabfall von Band zu Band erfolgt dabei bei konstantem Modulationsindex, und wenn man die Einflussnahme von $n$ auf das Argument an die Besselfunktion und somit den Wert dieser herausrechnet, im Verhältnis $\frac{1}{2}$ zu $\frac{1}{3}$ zu $\frac{1}{4}$ zu $\frac{1}{5}$ etc. Damit weist er Ähnlichkeit zum Spektrum einer Sägezahnwelle auf, bei der die Obertöne in genau in diesen Verhältnissen zum Grundton stehen. Feedback-FM bietet damit die Möglichkeit, mit nur einem Operator Töne zu erzeugen, die einen rauen Charakter aufweisen. 
 
