Gary Verbesserungen eingebaut

--- a/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
+++ b/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
@@ -51,7 +51,7 @@ Die Funktion \ref{eq:FormelinchenBessel} kann übersichtlich zusammengefasst wer
 \begin{equation}\label{esq:Besselbabymonster}
 \sin(w_ct + I\sin(w_mt)) = \sum_{n=-\infty}^{\infty}J_n(I)\sin(w_ct+nw_mt)
 \end{equation}
-Das Frequenzspektrum für die einfache FM weist also sowohl oberhalb der Trägerfrequenz als auch unterhalb Seitenbänder stets im Abstand \begin{math} w_m \end{math} auf. Die jeweiligen Amplituden werden dabei durch die Ordnung der Besselfunktion bestimmt, und zwar in Abhängigkeit vom Modulationsindex, welcher als Argument an diese übergeben wird. Die Besselfunktion liefert dabei ab einem Modulationsindex größer ca. 2,5 auch negative Vorzeichen für die Amplituden der Seitenfrequenzen zurück, wie folgende grafischen Darstellung der Besselfunktion mit den Achsen \textit{Modulationsindex} und \textit{Nummer des Seitenbands} zeigt: \ref{fig:bessel3D}. 
+Das Frequenzspektrum für die einfache FM weist also sowohl oberhalb der Trägerfrequenz als auch unterhalb Seitenbänder stets im Abstand \begin{math} w_m \end{math} auf. Die jeweiligen Amplituden werden dabei durch die Ordnung der Besselfunktion bestimmt, und zwar in Abhängigkeit vom Modulationsindex, welcher als Argument an diese übergeben wird. Die Besselfunktion liefert dabei ab einem Modulationsindex größer ca. 2,5 auch negative Vorzeichen für die Amplituden der Seitenfrequenzen zurück, wie die grafischen Darstellung der Besselfunktion mit den Achsen \textit{Modulationsindex} und \textit{Nummer des Seitenbands} zeigt (siehe hierzu \ref{fig:bessel3D}). 
 
 In der Darstellung \ref{eq:FormelinchenBessel} lässt sich am Vorzeichen des jeweiligen Terms zusätzlich auch ablesen, dass Besselkoeffizienten ungerader Ordnung zu negativen Amplitudenwerten des jeweiligen unteren Seitenbandes führen. Untere Seitenbänder können nun bei Trägerfrequenzen nahe 0 Hz oder einem ausreichend großen Modulationsindex natürlich auch im negativen Hz-Bereich landen. Da negative Frequenzen, also Seitenbänder links der 0 Hz, einer Phasenverschiebung um 180 Grad entsprechen, erhält man das endgültige, akustisch wahrgenommene Frequenzspektrum durch die Spiegelung dieser negativen Frequenzen je einmal an Abszisse und Ordinate. Dies enspricht einer Phasenverschiebung (Spiegelung Abszisse), und zwar nun im positiven Bereich (Spiegelung Ordinate). Dabei kann es natürlich zur Auslöschung von Bändern durch die Addition ursprünglich negativer Amplituden der unteren Seitenbänder mit negativen Frequenzen auf bereits vorhandene positive Amplituden der oberen Seitenbänder im positiven Bereich kommen. Umgekehrt kann natürlich auch eine Verstärkung die Folge sein, wenn negative Seitenfrequenzbänder links der 0 Hz mit positiver Amplitude auf positive Bänder mit positiver Amplitude fallen.
 
@@ -94,7 +94,7 @@ Teilen sich zwei Träger $T1$ und $T2$ denselben Modulator $M$,
 \caption{Schema der Schaltung zweier Träger mit gemeinsamem Modulator. }
 \end{figure}
 \FloatBarrier 
-so kann das Frequenzspektrum ebenfalls als Summe zweier unabhängiger einfacher FM betrachtet werden. Hierzu berechnet man zunächst das Frequenzspektrum des einen Trägers $T1$ anhand Modulationsfrequenz und Modulationsindex des Modulators M. Anschließend berechnet man das Frequenzspektrum für den zweiten Träger $T2$, wobei wieder Frequenz und Modulationsindex von Modulator $M$ bezogen werden. Aufsummiert ergibt sich das Gesamtspektrum. Das Interessante an dieser Form der Parallelschaltung besteht in der Möglichkeit, nur einen einzigen Modulator zur Modulation mehrerer vorhandener Träger, deren Modulatoren dieselbe Modulationsfrequenz aufweisen, zu verwenden. Dadurch können die freigewordenen Modulatoren für andere Zwecke verwendet werden, z.B. um einen der Träger parallel durch zwei Modulatoren zu modulieren (siehe \ref{singlecarryparallelmod}) oder sogar zum Modulieren des bereits eingesetzten Modulators (was dann der Kaskadenschaltung entspräche, siehe \ref{cascade}).  
+so kann das Frequenzspektrum ebenfalls als Summe zweier unabhängiger einfacher FM betrachtet werden. Hierzu berechnet man zunächst das Frequenzspektrum des einen Trägers $T1$ bei der Modulationsfrequenz und Modulationsindex des Modulators M. Anschließend berechnet man das Frequenzspektrum für den zweiten Träger $T2$, wobei wieder Frequenz und Modulationsindex von Modulator $M$ bezogen werden. Aufsummiert ergibt sich das Gesamtspektrum. Das Interessante an dieser Form der Parallelschaltung besteht in der Möglichkeit, nur einen einzigen Modulator zur Modulation mehrerer vorhandener Träger, deren Modulatoren dieselbe Modulationsfrequenz aufweisen, zu verwenden. Dadurch können die freigewordenen Modulatoren für andere Zwecke verwendet werden, z.B. um einen der Träger parallel durch zwei Modulatoren zu modulieren (siehe \ref{singlecarryparallelmod}) oder sogar zum Modulieren des bereits eingesetzten Modulators (was dann der Kaskadenschaltung entspräche, siehe \ref{cascade}).  
 
 Die Möglichkeit, denselben Modulator für verschiedene Träger zu verwenden, bedeutet logischerweise, dass die \textit{individuelle} Modulierbarkeit beider Träger aufgegeben wird, da sich Änderungen an den Einstellungen von $M$ nun zwangsläufig sowohl auf $T1$ als auch auf $T2$ auswirken. Die gleiche Mächtigkeit zweier paralleler Träger mit demselben Modulator $M$ im Vergleich zum Setup mit mehreren Trägern, welche jeweils ihren eigenen Modulator besitzen, wobei jedoch jeder dieser Modulatoren genau dieselben Einstellungen wie $M$ aufweist, sei im Folgenden illustriert. 
 
@@ -156,7 +156,7 @@ Substituiert man auch hier wieder jedes \begin{math} \sin(I\sin(w_{mx}t) \end{ma
 \begin{equation}\label{eq:ParallelKompakt}
 \sin(w_ct + I_1\sin(w_{m1}t) + I_2\sin(w_{m2}t)) = \sum_{i=-\infty}^{\infty}\sum_{k=-\infty}^{\infty}J_i(I_1)J_k(I_2)\sin(w_ct + iw_{m1}t + kw_{m2}t)
 \end{equation}
-Damit ergeben sich exakt $i \times k$ Kombinationen der Besselfunktionskoeffizienten. Das bedeutet, dass bereits für alle Kombinationen der Indizes von -2 bis +2 ganze 25 verschiedene Terme generiert werden: 16 für die Kombinationsmöglichkeiten von 1 und 2 jeweils mit positivem oder negativem Vorzeichen; weitere 9 für die Kombinationen von 0 mit 1 oder 2 inklusive beider Vorzeichen; schließlich noch die einzelne Kombination von 0 mit sich selbst. Nachdem jeder Term für ein Seitenband steht, kann man sich die Komplexität des resultierenden Spektrums leicht ausmalen. Die entsprechenden Additionsterme lauten wie folgt:
+Damit ergeben sich exakt $i \times k$ Kombinationen der Besselfunktionskoeffizienten. Das bedeutet, dass bereits für alle Kombinationen der Indizes von -2 bis +2 ganze 25 verschiedene Terme generiert werden: 16 für die Kombinationsmöglichkeiten von 1 und 2 jeweils mit positivem und negativem Vorzeichen; weitere 9 für die Kombinationen von 0 mit 1 oder 2 inklusive beider Vorzeichen; schließlich noch die einzelne Kombination von 0 mit sich selbst. Nachdem jeder Term für ein Seitenband steht, kann man sich die Komplexität des resultierenden Spektrums leicht ausmalen. Die entsprechenden Additionsterme lauten wie folgt:
 \begin{equation}\label{eq:wallofequations}
 \begin{split}
 \sin&(w_ct + I_1\sin(w_{m1}t) + I_2\sin(w_{m2}t)) \\
@@ -178,11 +178,11 @@ Damit ergeben sich exakt $i \times k$ Kombinationen der Besselfunktionskoeffizie
 \end{equation}
 Sofern zwei Zeilen eine Kombination von Besselkoeffizienten derselben Ordnung aufweisen, steht die ober Zeile für das obere Seitenfrequenzband, die Zeile darunter für das untere Seitenfrequenzband. Das gilt unter der Voraussetzung, dass die Modulationsfrequenz von M1 größer ist als jene von M2 - sonst stehen die linken Terme beider Zeilen für das obere Frequenzband und die rechten Terme für das untere. Entscheidend ist also, ob die Summe beider Modulatoren zusammen ein negatives Vorzeichen besitzen (unteres Seitenband) oder ein positives (oberes Seitenband). Die Lage eines Frequenzbands ergibt sich damit stets durch den Abstand eines Vielfachen der ersten Modulatorfrequenz vom Träger nach beiden Seiten, und um diesen Punkt herum dann jeweils um ein Vielfaches der zweiten Modulatorfrequenz nach beiden Seiten versetzt. Die Amplitude des jeweiligen Bandes liefert das Produkt der Besselkoeffizienten, welche die Modulationsindizes als Argumente bekommen. 
 
-Eine Abkürzung, um auf die Additionsterme für das Spektrum oben zu gelangen, sei hier noch kurz präsentiert: Sieht man sich z.B. die beiden Zeilen mit den Besselkoeffizienten \begin{math} J_1J_2 \end{math} an, so kann man sich klarmachen, dass diese beiden Zeilen zusammen die Kombinationen der Ordnungen (1,2),(1,-2),(-1,2),(-1,-2) abdecken (sprich, die Wechselwirkung zwischen erstem und zweitem Frequenzband). Nun weiß man bereits, dass man 4 Terme braucht. Innerhalb jedes einzelnen Terms bekommt jeweils \begin{math} w_{m1} \end{math} als Koeffizient die erste Vektorkomponente, \begin{math} w_{m2} \end{math} die zweite Vektorkomponente. Für den Vektor (1,-2) lautet der Term somit \begin{math} J_1(I_1)J_2(I_2)\sin(w_ct + w_{m1}t - 2w_{m2}t) \end{math}. Der gesamte Term erhält als Vorzeichen noch das Produkt der Vorzeichen der Vektorkomponenten, jeweils potenziert mit dem Betrag der jeweiligen Komponente. Für das gewählte Beispiel wäre das folglich \begin{math} (1)^1*(-1)^2 = 1 \end{math}, und der Term bekommt damit ein positives Vorzeichen. Die Bedingung des Potenzierens der Vorzeichen leitet sich dabei aus folgender Eigenschaft der Besselfunktion (\cite[S.358, Satz~9.1.5]{abramowitz}) ab:
+Eine Abkürzung, um auf die Additionsterme für das Spektrum oben zu gelangen, sei hier noch kurz präsentiert: Sieht man sich z.B. die beiden Zeilen mit den Besselkoeffizienten \begin{math} J_1J_2 \end{math} an, so lässt sich einsehen, dass diese beiden Zeilen zusammen die Kombinationen der Ordnungen (1,2),(1,-2),(-1,2),(-1,-2) abdecken (sprich, die Wechselwirkung zwischen erstem und zweitem Frequenzband). Daraus folgt bereits, dass 4 Terme benötigt werden. Innerhalb jedes einzelnen Terms bekommt jeweils \begin{math} w_{m1} \end{math} als Koeffizient die erste Vektorkomponente, \begin{math} w_{m2} \end{math} die zweite Vektorkomponente. Für den Vektor (1,-2) lautet der Term somit \begin{math} J_1(I_1)J_2(I_2)\sin(w_ct + w_{m1}t - 2w_{m2}t) \end{math}. Der gesamte Term erhält als Vorzeichen noch das Produkt der Vorzeichen der Vektorkomponenten, jeweils potenziert mit dem Betrag der jeweiligen Komponente. Für das gewählte Beispiel wäre das folglich \begin{math} (1)^1*(-1)^2 = 1 \end{math}, und der Term bekommt damit ein positives Vorzeichen. Die Bedingung des Potenzierens der Vorzeichen leitet sich dabei aus folgender Eigenschaft der Besselfunktion (\cite[S.358, Satz~9.1.5]{abramowitz}) ab:
 \begin{equation}
 J_{-n}(x) = (-1)^nJ_n(x)
 \end{equation}
-Um die Zusammenhänge grafisch zu veranschaulichen, nehmen wir zunächst einen Träger und modulieren ihn durch $M1$. Um den Effekt von Reflektionen an der 0 Hz-Barriere durch negative Frequenzen zu verringern, setzen wir diesmal die Trägerfrequenz auf $1250 Hz$. 
+Um die Zusammenhänge grafisch zu veranschaulichen, nehmen wir zunächst einen Träger und modulieren ihn durch $M1$. Um den Effekt von Reflektionen an der 0 Hz-Barriere durch negative Frequenzen zu verringern, wird diesmal die Trägerfrequenz auf $1250 Hz$ gesetzt. 
 \FloatBarrier
 \begin{figure} [ht]
 \centering
@@ -190,7 +190,7 @@ Um die Zusammenhänge grafisch zu veranschaulichen, nehmen wir zunächst einen T
 \caption{Einfache FM mit $f_c = 1250$, $w_m = 450$, $I = 1$. }
 \end{figure}
 \FloatBarrier
-Man sieht im Spektrum, dass wie erwartet die Trägerfrequenz bei 1250 Hz liegt, und das erste Seitenband bei $ 1250 + 450 =$ 1700 Hz. Die Additionsterme aus Gleichung \ref{eq:wallofequations} legen nun nahe, dass bei einer Modulation eines Trägers durch zwei parallele Modulatoren jeweils oberhalb und unterhalb jedes von $M1$ erzeugten Seitenbandes in Abständen der Frequenz von $M2$ dessen Seitenbänder liegen sollten. Zum Vergleich betrachten wir also zuerst noch einen Träger mit einer Frequenz, die dem ersten Seitenband von eben, 1700 Hz, entspricht, und modulieren diesen durch $M2 =$ 180 Hz, da wir so eine Prognose für die Seitenbänder von $M2$ bei einer gemeinsamen Modulation des Trägers erhalten. Beide Modulationsindizes erhalten den Wert 1, da die Besselfunktionen mit steigender Ordnung für dieses Argument kontinuierlich kleiner werden. Damit werden die Frequenzbänder niedriger Ordnung stets erkennbarer sein als ihre Nachbarn höherer Ordnung, und der Vergleich der beiden gewählten Einzelmodulationen mit der Parallelmodulation gewinnt an Aussagekraft.
+Man sieht im Spektrum, dass wie erwartet die Trägerfrequenz bei 1250 Hz liegt, und das erste Seitenband bei $ 1250 + 450 =$ 1700 Hz. Die Additionsterme aus Gleichung \ref{eq:wallofequations} legen nun nahe, dass bei einer Modulation eines Trägers durch zwei parallele Modulatoren jeweils oberhalb und unterhalb jedes von $M1$ erzeugten Seitenbandes in Abständen der Frequenz von $M2$ wiederum eben dessen Seitenbänder liegen sollten. Zum Vergleich betrachten wir also zuerst noch einen Träger mit einer Frequenz, die dem ersten Seitenband von eben, 1700 Hz, entspricht, und modulieren diesen durch $M2 =$ 180 Hz, da wir so eine Prognose für die Seitenbänder von $M2$ bei einer gemeinsamen Modulation des Trägers erhalten. Beide Modulationsindizes erhalten den Wert 1, da die Besselfunktionen mit steigender Ordnung für dieses Argument kontinuierlich kleiner werden. Damit werden die Frequenzbänder niedriger Ordnung stets erkennbarer sein als ihre Nachbarn höherer Ordnung, und der Vergleich der beiden gewählten Einzelmodulationen mit der Parallelmodulation gewinnt an Aussagekraft.
 \FloatBarrier
 \begin{figure} [ht]
 \label{par1}
@@ -199,7 +199,7 @@ Man sieht im Spektrum, dass wie erwartet die Trägerfrequenz bei 1250 Hz liegt, 
 \caption{Einfache FM mit $f_c = 1700$, $w_m = 180$, $I = 1$. }
 \end{figure}
 \FloatBarrier
-Hier nun die Anwendung beider Modulatoren mit unveränderten Einstellungen auf den Träger des ersten Spektrums mit einer Trägerfrequenz von 1250 Hz. Es steht zu erwarten, dass der erste Modulator Seitenbänder bei 800 Hz und 1700 Hz erzeugt, der zweite von dort ausgehend jeweils oberhalb und unterhalb eines im Abstand von 180 Hz. Die beiden Spektren oben sollten sich so ungefähr im folgenden gemeinsamen Spektrum wiederfinden lassen, zuzüglich Frequenzbändern von 180 Hz oberhalb und unterhalb von 1250 Hz:
+Hier nun die Anwendung beider Modulatoren mit unveränderten Einstellungen auf den Träger des ersten Spektrums mit einer Trägerfrequenz von 1250 Hz. Es steht zu erwarten, dass der erste Modulator Seitenbänder bei 800 Hz und 1700 Hz erzeugt, der zweite von dort ausgehend jeweils oberhalb und unterhalb eines im Abstand von 180 Hz. Die beiden Spektren oben sollten sich im folgenden gemeinsamen Spektrum wiederfinden lassen, zuzüglich Frequenzbändern von 180 Hz oberhalb und unterhalb von 1250 Hz:
 \FloatBarrier
 \begin{figure} [ht]
 \centering
@@ -244,7 +244,7 @@ einfach $ \sin(w_mt) $ durch $ \sin(w_{m1}t + I_2\sin(w_{m2}t)) $ ersetzt werden
 &= \sum_{n=-\infty}^{\infty}J_n(I_1)\sin((w_{c}t+nw_{m1}t) + (I_2n(\sin(w_{m2}t))))
 \end{split}
 \end{equation}
-Da hier die beiden Klammern in der Sinusfunktion zusammen exakt einer eigenständigen FM entsprechen, kann das Argument für den Sinus auch durch die Formel zur Berechnung ihres Spektrums (\ref{eq:freqfm}) substituiert werden. Es ergibt sich damit für das Frequenzspektrum der Kaskadenschaltung wie in \cite{schottiWeb}:
+Da hier die beiden Klammern in der Sinusfunktion zusammen exakt einer eigenständigen FM entsprechen, kann das Argument für den Sinus auch durch die Formel zur Berechnung ihres Spektrums (\ref{eq:freqfm}) substituiert werden. Es ergibt sich damit für das Frequenzspektrum der Kaskadenschaltung (siehe \cite{schottiWeb}):
 \begin{equation}
 \sum_{n=-\infty}^{\infty}\sum_{k=-\infty}^{\infty}J_n(I_1)J_k(\mathbf{n}I_2)\sin(w_{c}t+nw_{m1}t + kw_{m2}t)
 \end{equation}
@@ -303,7 +303,7 @@ Zum Vergleich hier nochmals das Gesamtspektrum der Parallelschaltung eines Träg
 \caption{Parallele FM mit $f_c = 1250$, $w_{m1} = 450$, $w_{m2} = 180$, $I_1 = 1$, $I_2 = 1$. }
 \end{figure}
 \FloatBarrier
-Die Spektren ähneln sich stark, es zeigt sich aber, dass wie erwartet die Trägerfrequenz mehr Energie erhält, da der eine Besselkoeffizient der Ordnung $0$ durch die Multiplikation des Arguments mit $0$ den Wert 1 zurückliefert, anstelle eines niedrigeren Werts wie bei der Parallelschaltung. Auch fällt auf, dass alle Nicht-Kombinationsseitenfrequenzen des äußeren Modulators entfallen (also alle Kombinationen, wo der Besselkoeffizient des inneren Modulators $M1$ die Ordnung $0$ besitzt). Dies liegt ebenfalls an der der Multiplikation von $I_2$ mit $n$, siehe \ref{Kaskadenspecials}. 
+Die Spektren ähneln sich stark, es zeigt sich aber, dass wie erwartet die Trägerfrequenz mehr Energie erhält, da der eine Besselkoeffizient der Ordnung $0$ durch die Multiplikation des Arguments mit $0$ den Wert 1 zurückliefert, anstelle eines niedrigeren Werts wie bei der Parallelschaltung. Auch fällt auf, dass alle Nicht-Kombinationsseitenfrequenzen des äußeren Modulators entfallen (also alle Kombinationen, in welchen der Besselkoeffizient des inneren Modulators $M1$ die Ordnung $0$ besitzt). Dies liegt ebenfalls an der Multiplikation von $I_2$ mit $n$, siehe \ref{Kaskadenspecials}. 
 Der Vergleich wird nochmals wiederholt mit den Einstellungen $I_1 = 2$ und $I_2 = 3$. Zuerst wieder die Kaskadenschaltung:
 \FloatBarrier
 \begin{figure} [ht]
@@ -320,7 +320,7 @@ Und die Parallelschaltung mit zwei Modulatoren auf denselben Träger:
 \caption{Parallele FM mit $f_c = 1250$, $w_{m1} = 450$, $w_{m2} = 180$, $I_1 = 2$, $I_2 = 3$. }
 \end{figure}
 \FloatBarrier
-Da ein höherer Modulationsindex grundsätzlich die Bandbreite erhöht und für ein reicheres Spektrum erzeugt \cite{chowningPaper}, lassen sich schon für die gewählten Indizes von $2$ und $3$ rein visuell die Unterschiede zwischen der parallelen Modulation eines Trägers sowie der Kaskadenschaltung kaum noch nachvollziehen. Dennoch sind natürlich dieselben Prinzipien am Werk wie im vorherigen Beispiel.
+Da ein höherer Modulationsindex grundsätzlich die Bandbreite erhöht und ein reicheres Spektrum erzeugt \cite{chowningPaper}, lassen sich schon für die gewählten Indizes von $2$ und $3$ rein visuell die Unterschiede zwischen der parallelen Modulation eines Trägers sowie der Kaskadenschaltung kaum noch nachvollziehen. Dennoch sind dieselben Prinzipien am Werk wie im vorherigen Beispiel.
 
 \subsection{Feedbackschaltung}
 
@@ -353,7 +353,7 @@ Im Folgenden sehen wir das Spektrum einer einfachen Feedbackschaltung eines Trä
 \caption{Feedback-FM mit $f_{c1} = 220$, $f_{c2} = 440$, $I_1 = 1$, $I_2 = 1$. }
 \end{figure}
 \FloatBarrier
-Man erkennt, dass jedes Frequenzband exakt um ein Vielfaches der Trägerfrequenz von dieser entfernt liegt. Im Vergleich hier das Spektrum zweier Feedbackschaltungen mit gleicher Trägerfrequenz, einmal mit Modulationsindex von $0.5$, einmal mit Modulationsindex von $1.5$:
+Man erkennt, dass jedes Frequenzband exakt um ein Vielfaches der Trägerfrequenz von dieser entfernt liegt. Im Vergleich abschließend noch das Spektrum zweier Feedbackschaltungen mit gleicher Trägerfrequenz, einmal mit Modulationsindex von $0.5$, einmal mit Modulationsindex von $1.5$:
 \FloatBarrier
 \begin{figure} [ht]
 \centering
