--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -1,9 +1,9 @@
 @Article{chowningPaper,
-  author =       "John M. Chowning",
-  title =        "The Synthesis of Complex Audio Spectra by Means of Frequency Modulation",
-  journal =      "Journal of the Audio Engineering Society",
-  pages =        "526--534",
-  year =         "1973"
+  author =       {John M. Chowning},
+  title =        {The Synthesis of Complex Audio Spectra by Means of Frequency Modulation},
+  journal =      {Journal of the Audio Engineering Society},
+  pages =        {526--534},
+  year =         {1973}
 }
 
 % Julius
